less ugly more functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
+:root {
+    --backdrop: blur(10px) brightness(0.8) contrast(0.8);
+    --focus-color: #00000047;
+    --border: 2px solid rgba(255, 255, 255, 0.1);
+    --btn: #ff000088;
+}
+
 body {
     background-image: url("bg.webp");
     background-size: cover;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
