--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -1,5 +1,5 @@
 .todo {
-    background-color: #00000022;
+    background-color: var(--focus-color);
     display: grid;
     grid-template: 1fr / 2fr 1fr;
     align-items: center;
@@ -8,11 +8,14 @@
         grid-template: min-content / repeat(4, min-content);
         gap: 0.5rem;
         .btn {
-            background-color: red;
+            background-color: var(--btn);
+            color: white;
+            border-radius: 50%;
         }
     }
     .text {
         display: grid;
         grid-template: repeat(3, min-content) / 1fr;
+        color: white;
     }
 }
