--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -3,19 +3,32 @@
     display: grid;
     grid-template: 1fr / 2fr 1fr;
     align-items: center;
+    padding: 10px;
     .buttons {
         display: grid;
         grid-template: min-content / repeat(4, min-content);
         gap: 0.5rem;
+        margin: auto 0 auto auto;
         .btn {
             background-color: var(--btn);
             color: white;
             border-radius: 50%;
+            font-size: 1.5rem;
+            width: 2.5rem;
+            height: 2.5rem;
+            text-align: center;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: var(--focus-color);
+            transition: 0.3s;
+            color: var(--btn);
         }
     }
     .text {
         display: grid;
         grid-template: repeat(3, min-content) / 1fr;
         color: white;
+        height: 4rem;
     }
 }
