styling, auto date, and preparation for sorting

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,17 @@
 }
 
 body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.background {
+    width: 100lvw;
+    height: 100lvh;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
     background-image: url("bg.webp");
     background-size: cover;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
