--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -10,4 +10,19 @@
     min-height: 60svh;
     grid-template: min-content / 1fr;
     place-content: start;
+
+    .sorting {
+        margin-left: 0.5rem;
+        color: white;
+        .sort {
+            text-decoration: underline;
+            padding: 0.3rem 0.2rem;
+        }
+        .sort:hover {
+            cursor: pointer;
+            background-color: var(--btn);
+            border-radius: 0.5rem;
+        }
+    }
+
 }
