--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -32,6 +32,14 @@
         display: grid;
         grid-template: repeat(3, min-content) / 1fr;
         color: white;
-        height: 4rem;
+        height: 4.8rem;
+        place-content: center;
+        * {
+            padding: 0.15rem 0.3rem;
+            border-radius: 5px;
+        }
+        .task:hover, .task:focus {
+            background-color: var(--focus-color);
+        }
     }
 }
